# fl0w

./: .gitmodules  README.md  TODO.md
example/abc/: CMakeLists.txt  main.cpp
example/analytic/: CMakeLists.txt  main.cpp
example/batchelor_vortex/: CMakeLists.txt  main.cpp
example/jhtdb/: CMakeLists.txt  main.cpp  test.py
example/jhtdb/channel_flow/: CMakeLists.txt  main.cpp
example/jhtdb/forced_isotropic_turbulence/: main.cpp
example/kinematic/: CMakeLists.txt  main.cpp
example/simple_shear/: CMakeLists.txt  main.cpp
include/fl0w/: _jhtdb.h  abc.h  batchelor_vortex.h  flow.h  jhtdb.h  kinematic.h  randgen.h  simple_shear.h  taylor_green_vortex.h  uniform.h
include/fl0w/_save/: turbulence.h
include/fl0w/analytic/: abc.h  batchelor_vortex.h  simple_shear.h  taylor_green_vortex.h  uniform.h
include/fl0w/analytic/_todo/: abc.h  batchelor_vortex.h
include/fl0w/jhtdb/: channel_flow.h  forced_isotropic_turbulence.h  jhtdb.h
